# buildsome-tst

./: .ghci  .gitignore  buildsome-tst.cabal  stack.yaml
app/: Interpolate.hs  Main.hs
app/BMake/: Base.hs  Data.hs  Interpreter.hs  Lexer.x  Parser.y  User.hs
app/Buildsome/: BuildMaps.hs  Print.hs
src/Lib/Makefile/: Parser.hs  Types.hs
