name:                buildsome-tst
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/buildsome-tst#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag Debug
  Description: Enable debug support
  Default:     False

executable buildsome-tst-exe
  hs-source-dirs:      app, src
  main-is:             Main.hs
  other-modules:       BMake.User
                     , BMake.Base
                     , BMake.Data
                     , BMake.Interpreter
                     , BMake.Lexer
                     , BMake.Parser
                     , Buildsome.BuildMaps
                     , Buildsome.Print
                     , Lib.ByteString
                     , Lib.Cartesian
                     , Lib.FilePath
                     , Lib.Makefile
                     , Lib.Makefile.CondState
                     , Lib.Makefile.InstantiatePattern
                     , Lib.Makefile.MonadClass
                     , Lib.Makefile.Parser
                     , Lib.Makefile.Types
                     , Lib.Makefile.VerifyPhonies
                     , Lib.Parsec
                     , Lib.StringPattern
                     , Lib.TimeIt

  if flag(debug) {
    ghc-options:       -threaded -Wall -O0
  } else {
    ghc-options:       -threaded -Wall -O2 -fsimpl-tick-factor=1000 -rtsopts -with-rtsopts=-A16M -fwarn-incomplete-uni-patterns
    ghc-prof-options:  -auto-all -caf-all -rtsopts
  }

  build-depends:       aeson
                     , array
                     , base
                     , base-compat
                     , binary
                     , bytestring
                     , containers
                     , deepseq
                     , deepseq-generics
                     , directory
                     , dlist
                     , split >= 0.2
                     , filepath
                     , parsec
                     , text
                     , time
                     , transformers
                     , unix
                     , yaml >= 0.8.13
  default-language:    Haskell2010
  build-tools:         happy, alex

test-suite buildsome-tst-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson
                     , array
                     , base
                     , base-compat
                     , binary
                     , buildsome-tst
                     , bytestring
                     , containers
                     , deepseq
                     , deepseq-generics
                     , dlist
                     , parsec
                     , text
                     , time
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/buildsome-tst
